# platformer-gs

./: .gitignore  CMakeLists.txt  Cakefile  android.sh  build.sh  emscripten.sh  emvalac.json  entitas.json  entitas.sh  index.html  license.md  license.txt  list.coffee  meson.build  meson_options.txt  package.json  platformer.avprj  project.vapi  readme.md
android/: AndroidManifest.xml  build.xml
android/jni/src/: Android.mk  Components.c  Entities.c  Game.c  Hud.c  Map.c  Systems.c  main.c
android/jni/src/sdx/: Files.c  Font.c  exceptions.c  sdx.c
android/jni/src/sdx/audio/: Sound.c  audio.c
android/jni/src/sdx/files/: FileHandle.c  files.c
android/jni/src/sdx/graphics/: BitmapFont.c  Camera.c  Sprite.c  Surface.c  TextureAtlas.c  TextureEnums.c  TextureRegion.c  graphics.c
android/jni/src/sdx/utils/: Cache.c  File.c  Json.c  StringTokenizer.c  utils.c
android/src/com/darkoverlordofdata/platformer/: platformerActivity.java
android/src/org/libsdl/app/: SDLActivity.java
data/: CMakeLists.txt  resources.gresource.xml
data/assets/: default.json  default.txt
data/local/: CMakeLists.txt
doc/: CMakeLists.txt
ecs/: Entities.gs  Game.gs  Systems.gs
experiment/: Classless.gs
experiment/ecs/: Components.gs  Entities.gs  Main.gs  Systems.gs
experiment/platformer/: CMakeLists.txt  Game.gs  TextCache.gs
experiment/src/: Platformer.gs
po/: CMakeLists.txt  POTFILES.in
sdx/: sdx.vala
sdx/graphics/: BitmapFont.vala  Camera.vala  Sprite.vala  TextureRegion.vala
sdx/math/: AABB.vala  Character.vala  Map.vala  MovingObject.vala  Vector2.vala  Vector2i.vala  math.vala
sdx/utils/: Json.vala
src/: CMakeLists.txt  Components.gs  Components.vala  Entities.gs  Factory.vala  Game.gs  Game.vala  Hud.gs  Main.gs  Map.gs  Map.vala  Platformer.gs  Player.gs  Systems.gs  Time.gs  main.gs  main.vala  platformer.vala
src (copy)/: CMakeLists.txt  Entities.gs  platformer.vala
src-platformer1/: CMakeLists.txt  Components.gs  Game.gs  Main.gs  Map.gs  Player.gs  TextCache.gs
src-shmup/: CMakeLists.txt  Components.gs  Entities.gs  Game.gs  Main.gs
src/sdx/: Color.gs  sdx.vala
src/sdx/graphics/: Camera.vala  Surface.vala  graphics.vala
src/sdx/math/: math.vala
src/sdx/utils/: Json.vala  StringTokenizer.vala
src/systems/: HudSystem.vala  LogicSystem.vala  PhysicsSystem.vala  System.vala
src/util/: Json.vala
src/vapis/: lua.vapi
src/vapis-em/: chipmunk.vapi
src/web.src/: index.js
web/: platformer.data  platformer.html  platformer.js  platformer.wasm
